versioned_docs/version-1.2/installation/index.mdx
---
id: installation
title: Installation
sidebar_position: 1
slug: /
---

import { IntegrationList } from "@site/src/components/IntegrationList";

Botkube has two components that need to be installed.

1. Botkube App Integration in your Slack/Mattermost/Microsoft Teams/Discord
2. Botkube agent in your Kubernetes cluster

## Feature map

| Feature                                                | Cloud Slack        | Slack              | Mattermost         | MS Teams           | Discord            | Elasticsearch      | Webhook            |
| ------------------------------------------------------ | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ |
| K8s Event push                                         | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Executor plugins (e.g. `kubectl`, `helm`, etc.)        | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | NA                 | NA                 |
| Source plugins (e.g. `kubernetes`, `prometheus`, etc.) | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Multi cluster support                                  | :heavy_check_mark: | :x:                | :heavy_check_mark: | :x:                | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Per-channel command execution configuration            | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :x:                | :heavy_check_mark: | NA                 | NA                 |
| Interactive messages                                   | :heavy_check_mark: | :heavy_check_mark: | :x:                | :x:                | :x:                | NA                 | NA                 |
| Actionable notifications                               | :heavy_check_mark: | :heavy_check_mark: | :x:                | :x:                | :x:                | NA                 | NA                 |

## Integrations

<IntegrationList
  integrations={[
    { name: "Slack", image: "/images/integrations/slack.svg", link: "installation/slack" },
    { name: "Mattermost", image: "/images/integrations/mattermost.svg", link: "installation/mattermost" },
    { name: "Discord", image: "/images/integrations/discord.svg", link: "installation/discord" },
    { name: "Teams", image: "/images/integrations/msteams.svg", link: "installation/teams" },
    { name: "Elasticsearch", image: "/images/integrations/elasticsearch.svg", link: "installation/elasticsearch" },
    { name: "Webhook", image: "/images/integrations/webhooks.svg", link: "installation/webhook" },
  ]}
/>

:::tip
You can use a single Botkube agent to serve all the interfaces - Slack, Mattermost, Microsoft Teams, Elasticsearch and Webhook. <br/>
You just need to enable required mediums through the settings and add a necessary configuration.<br/>
_see the [configuration](../configuration) section for more information_
:::
