versioned_docs/version-1.7/installation/index.mdx
---
id: installation
title: Installation
sidebar_position: 1
slug: /
---

import { IntegrationList } from "@site/src/components/IntegrationList";

Botkube has two components that need to be installed.

1. Botkube App Integration in your Slack/Mattermost/Microsoft Teams/Discord
2. Botkube agent in your Kubernetes cluster

## Feature map

Learn about Botkube features and their availability in different integrations.

### Bots

Compare our bidirectional integrations:

| Feature                                                          | Cloud Slack        | Slack              | Microsoft Teams    | Discord            | Mattermost         |
| ---------------------------------------------------------------- | ------------------ | ------------------ | ------------------ | ------------------ | ------------------ |
| Source plugins support (e.g. `kubernetes`, `prometheus`, etc.)   | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Executor plugins support (e.g. `kubectl`, `helm`, etc.)          | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Multi-cluster support                                            | :heavy_check_mark: | :x:                | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Enhanced per-channel plugin configuration including RBAC policy. | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: |
| Interactive messages                                             | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :x:                | :x:                |
| Actionable notifications                                         | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark: | :x:                | :x:                |
| Emoji reactions                                                  | :heavy_check_mark: | :x:                | :x:                | :x:                | :x:                |

### Sinks

Compare our unidirectional integrations:

| Feature                                                        | Elasticsearch      | Webhook            |
| -------------------------------------------------------------- | ------------------ | ------------------ |
| Source plugins support (e.g. `kubernetes`, `prometheus`, etc.) | :heavy_check_mark: | :heavy_check_mark: |
| Multi-cluster support                                          | :heavy_check_mark: | :heavy_check_mark: |

## Integrations

<IntegrationList
  integrations={[
    { name: "Slack", image: "/images/integrations/slack.svg", link: "installation/slack" },
    { name: "Mattermost", image: "/images/integrations/mattermost.svg", link: "installation/mattermost" },
    { name: "Discord", image: "/images/integrations/discord.svg", link: "installation/discord" },
    { name: "Teams", image: "/images/integrations/msteams.svg", link: "installation/teams" },
    { name: "Elasticsearch", image: "/images/integrations/elasticsearch.svg", link: "installation/elasticsearch" },
    { name: "Webhook", image: "/images/integrations/webhooks.svg", link: "installation/webhook" },
  ]}
/>

:::tip
You can use a single Botkube agent to serve all the interfaces - Slack, Mattermost, Microsoft Teams, Elasticsearch and Webhook. <br/>
You just need to enable required mediums through the settings and add a necessary configuration.<br/>
_see the [configuration](../configuration) section for more information_
:::
